k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: test
  labels:
    name: go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: go-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-service
            port: 
              number: 80
